login&home pages

--- a/FirePlatform.Mobile/FirePlatform.Mobile.iOS/FirePlatform.Mobile.iOS.csproj
+++ b/FirePlatform.Mobile/FirePlatform.Mobile.iOS/FirePlatform.Mobile.iOS.csproj
@@ -95,6 +95,7 @@
     <None Include="Entitlements.plist" />
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <None Include="FodyWeavers.xml" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
@@ -157,5 +158,8 @@
       <Project>{5777802F-E6EF-45CB-A8BB-C901532926C7}</Project>
       <Name>FirePlatform.Mobile</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\logo.png" />
   </ItemGroup>
 </Project>
