--- a/FirePlatform.Mobile/FirePlatform.Mobile.Android/Properties/AndroidManifest.xml
+++ b/FirePlatform.Mobile/FirePlatform.Mobile.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.fireplatform.mobile.FirePlatform_Mobile">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.fireplatform.mobile">
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="27" />
-	<application android:label="FirePlatform.Mobile.Android"></application>
+	<application android:label="FirePlatform.Mobile.Android" android:icon="@drawable/logo"></application>
 </manifest>
