--- a/FirePlatform.Mobile/FirePlatform.Mobile/FirePlatform.Mobile.csproj
+++ b/FirePlatform.Mobile/FirePlatform.Mobile/FirePlatform.Mobile.csproj
@@ -11,8 +11,26 @@
 
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="3.3.0.967583" />
+    <PackageReference Include="FreshMvvm" Version="2.2.4" />
+    <PackageReference Include="Fody" Version="3.3.2" />
+    <PackageReference Include="PropertyChanged.Fody" Version="2.6.0" />
+    <PackageReference Include="sqlite-net-pcl" Version="1.5.231" />
+    <PackageReference Include="Xam.Plugin.Connectivity" Version="3.2.0" />
+    <PackageReference Include="Xam.Plugins.Settings" Version="3.1.1" />
+    <PackageReference Include="LiveXAML" Version="2.1.57" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FirePlatform.Mobile.Common\FirePlatform.Mobile.Common.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="PageModels.cs" />
+    <Compile Remove="MainPage.xaml.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="PageModels\" />
+    <Folder Include="Pages\" />
+    <Folder Include="Converters\" />
+    <Folder Include="Tools\" />
+    <Folder Include="Models\" />
   </ItemGroup>
 </Project>
