--- a/FirePlatform.Mobile/FirePlatform.Mobile.Android/FirePlatform.Mobile.Android.csproj
+++ b/FirePlatform.Mobile/FirePlatform.Mobile.Android/FirePlatform.Mobile.Android.csproj
@@ -28,7 +28,6 @@
     <DefineConstants>DEBUG;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <AndroidLinkMode>None</AndroidLinkMode>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -54,6 +53,12 @@
     <PackageReference Include="Xamarin.Android.Support.v4" Version="27.0.2.1" />
     <PackageReference Include="Xamarin.Android.Support.v7.CardView" Version="27.0.2.1" />
     <PackageReference Include="Xamarin.Android.Support.v7.MediaRouter" Version="27.0.2.1" />
+    <PackageReference Include="Syncfusion.Xamarin.SfListView">
+      <Version>16.3.0.29</Version>
+    </PackageReference>
+    <PackageReference Include="LiveXAML">
+      <Version>2.1.57</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
