--- a/FirePlatform.Mobile/FirePlatform.Mobile/FirePlatform.Mobile.csproj
+++ b/FirePlatform.Mobile/FirePlatform.Mobile/FirePlatform.Mobile.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Xam.Plugin.Connectivity" Version="3.2.0" />
     <PackageReference Include="Xam.Plugins.Settings" Version="3.1.1" />
     <PackageReference Include="LiveXAML" Version="2.1.57" />
+    <PackageReference Include="Syncfusion.Xamarin.SfListView" Version="16.3.0.29" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FirePlatform.Mobile.Common\FirePlatform.Mobile.Common.csproj" />
@@ -32,5 +33,8 @@
     <Folder Include="Converters\" />
     <Folder Include="Tools\" />
     <Folder Include="Models\" />
+    <Folder Include="Tools\SyncfusionTools\" />
+    <Folder Include="Controls\" />
+    <Folder Include="Enums\" />
   </ItemGroup>
 </Project>
