--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,14 @@ FirePlatform.Mobile/FirePlatform.Mobile/obj
 FirePlatform.Mobile/.vs
 FirePlatform.Mobile/FirePlatform.Mobile.Common/bin
 FirePlatform.Mobile/FirePlatform.Mobile.Common/obj
+FirePlatform.Mobile/FirePlatform.WebApi/FirePlatform.Repositories/obj/
+FirePlatform.Mobile/FirePlatform.WebApi/FirePlatform.Models/obj/
+FirePlatform.Mobile/FirePlatform.WebApi/FirePlatform.Utils/obj/
+FirePlatform.Mobile/FirePlatform.WebApi/FirePlatform.WebApi/obj/
+FirePlatform.Mobile/FirePlatform.WebApi/FirePlatform.WebApi/bin/
+FirePlatform.Mobile/FirePlatform.WebApi/FirePlatform.Utils/bin/
+FirePlatform.Mobile/FirePlatform.WebApi/FirePlatform.Services/obj/
+FirePlatform.Mobile/FirePlatform.WebApi/FirePlatform.Services/bin/
+FirePlatform.Mobile/FirePlatform.WebApi/FirePlatform.Repositories/bin/
+FirePlatform.Mobile/FirePlatform.WebApi/FirePlatform.Models/bin/
+FirePlatform.Mobile/FirePlatform.WebApi/.vs/
