--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ FirePlatform.Mobile/FirePlatform.Mobile/obj
 FirePlatform.Mobile/.vs
 FirePlatform.Mobile/FirePlatform.Mobile.Common/bin
 FirePlatform.Mobile/FirePlatform.Mobile.Common/obj
+FirePlatform.Mobile/FirePlatform.Mobile.iOS/bin/iPhoneSimulator/Debug
