--- a/FirePlatform.Mobile/FirePlatform.Mobile.Common/FirePlatform.Mobile.Common.csproj
+++ b/FirePlatform.Mobile/FirePlatform.Mobile.Common/FirePlatform.Mobile.Common.csproj
@@ -8,11 +8,16 @@
     <Compile Remove="Class1.cs" />
     <Compile Remove="Tools\Parser.cs" />
     <Compile Remove="Entities\GhostFormulas.cs" />
+    <Compile Remove="OverloadOperators\ItemOverloadOperators.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Entities\" />
     <Folder Include="Tools\" />
     <Folder Include="Interfaces\" />
     <Folder Include="Implements\" />
+    <Folder Include="Enums\" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="CoreCLR-NCalc" Version="2.2.51" />
   </ItemGroup>
 </Project>
