--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ FirePlatform.Mobile/FirePlatform.WebApi/FirePlatform.Services/bin/
 FirePlatform.Mobile/FirePlatform.WebApi/FirePlatform.Repositories/bin/
 FirePlatform.Mobile/FirePlatform.WebApi/FirePlatform.Models/bin/
 FirePlatform.Mobile/FirePlatform.WebApi/.vs/
+FirePlatform.Mobile/FirePlatform.Mobile.Android/bin/
