--- a/FirePlatform.Mobile/FirePlatform.Mobile.Android/FirePlatform.Mobile.Android.csproj
+++ b/FirePlatform.Mobile/FirePlatform.Mobile.Android/FirePlatform.Mobile.Android.csproj
@@ -97,6 +97,9 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
     <AndroidResource Include="Resources\drawable\logo.png" />
     <AndroidResource Include="Resources\drawable\splash.xml" />
+    <AndroidResource Include="Resources\drawable\settingsIcon.png" />
+    <AndroidResource Include="Resources\drawable\uk_flag.png" />
+    <AndroidResource Include="Resources\drawable\pl_flag.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\drawable-hdpi\" />
