--- a/FirePlatform.Mobile/FirePlatform.Mobile.Android/FirePlatform.Mobile.Android.csproj
+++ b/FirePlatform.Mobile/FirePlatform.Mobile.Android/FirePlatform.Mobile.Android.csproj
@@ -113,5 +113,14 @@
       <Name>FirePlatform.Mobile</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\shoppingCartAdd.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\shoppingCartCounter.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\shoppingCartRemove.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
