--- a/FirePlatform.Mobile/FirePlatform.Mobile/FirePlatform.Mobile.csproj
+++ b/FirePlatform.Mobile/FirePlatform.Mobile/FirePlatform.Mobile.csproj
@@ -33,7 +33,7 @@
     <Folder Include="Resources\" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Update="Pages\FormListPage.xaml">
+    <EmbeddedResource Update="Pages\BasketPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Pages\RegisterPage.xaml">
@@ -50,6 +50,8 @@
   <ItemGroup>
     <Compile Update="Resources\AppResources.Designer.cs">
       <DependentUpon>AppResources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
     </Compile>
   </ItemGroup>
 </Project>
