--- a/FirePlatform.Mobile/FirePlatform.WebApi/FirePlatform.WebApi/FirePlatform.WebApi.csproj
+++ b/FirePlatform.Mobile/FirePlatform.WebApi/FirePlatform.WebApi/FirePlatform.WebApi.csproj
@@ -1,13 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
     <AllowUntrustedCertificate>true</AllowUntrustedCertificate>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+    <PackageReference Include="CoreCLR-NCalc" Version="2.2.51" />
   </ItemGroup>
 
   <ItemGroup>
@@ -17,4 +19,13 @@
     <ProjectReference Include="..\FirePlatform.Utils\FirePlatform.Utils.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+    <Folder Include="Services\Calculation\" />
+    <Folder Include="Model\Template\" />
+    <Folder Include="Services\Parser\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="Model\Template\ScriptIgnoreAttribute.cs" />
+  </ItemGroup>
 </Project>
