--- a/FirePlatform.Mobile/FirePlatform.Mobile.iOS/Info.plist
+++ b/FirePlatform.Mobile/FirePlatform.Mobile.iOS/Info.plist
@@ -34,5 +34,10 @@
 	<string>FirePlatform.Mobile</string>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/AppIcon.appiconset</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>remote-notification</string>
+	</array>
 </dict>
 </plist>
