--- a/FirePlatform.Mobile/FirePlatform.WebApi/FirePlatform.WebApi/FirePlatform.WebApi.csproj
+++ b/FirePlatform.Mobile/FirePlatform.WebApi/FirePlatform.WebApi/FirePlatform.WebApi.csproj
@@ -24,6 +24,7 @@
     <Folder Include="Services\Calculation\" />
     <Folder Include="Model\Template\" />
     <Folder Include="Services\Parser\" />
+    <Folder Include="Services\Tools\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="Model\Template\ScriptIgnoreAttribute.cs" />
