--- a/CuttingSystem3mkMobile/CuttingSystem3mkMobile.Android/Properties/AndroidManifest.xml
+++ b/CuttingSystem3mkMobile/CuttingSystem3mkMobile.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.cuttingsystem.x3mk.mobile.cuttingsystem3mkmobile">
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="27" />
+	<uses-permission android:name="android.permission.CAMERA" />
+	<uses-permission android:name="android.permission.VIBRATE" />
 	<application android:label="CuttingSystem3mkMobile.Android"></application>
 </manifest>
