login page (VM, UI)

--- a/CuttingSystem3mkMobile/CuttingSystem3mkMobile/CuttingSystem3mkMobile.csproj
+++ b/CuttingSystem3mkMobile/CuttingSystem3mkMobile/CuttingSystem3mkMobile.csproj
@@ -24,6 +24,8 @@
     <Folder Include="Services\" />
     <Folder Include="Models\" />
     <Folder Include="Triggers\" />
+    <Folder Include="Controls\" />
+    <Folder Include="Convertors\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="Pages\ModelsPage.xaml.cs">
