--- a/CuttingSystem3mkMobile/CuttingSystem3mkMobile/CuttingSystem3mk.Mobile.csproj
+++ b/CuttingSystem3mkMobile/CuttingSystem3mkMobile/CuttingSystem3mk.Mobile.csproj
@@ -11,6 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Refit" Version="4.6.99" />
     <PackageReference Include="Xamarin.Forms" Version="3.6.0.264807" />
     <PackageReference Include="Xamarin.Essentials" Version="1.0.1" />
     <PackageReference Include="LiveXAML" Version="2.1.70" />
@@ -18,8 +19,6 @@
     <PackageReference Include="MvvmCross.Forms" Version="6.2.3" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Pages\" />
-    <Folder Include="PageModels\" />
     <Folder Include="Services\" />
     <Folder Include="Models\" />
     <Folder Include="Triggers\" />
@@ -34,5 +33,21 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="asus-zenfone-2-delux.plt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CuttingSystem.Mobile.Common\CuttingSystem.Mobile.Common.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Update="Pages\DeviceListPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Update="App.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </None>
+    <None Update="Pages\ModelsPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </None>
   </ItemGroup>
 </Project>
