--- a/CuttingSystem3mkMobile/CuttingSystem3mkMobile/CuttingSystem3mkMobile.csproj
+++ b/CuttingSystem3mkMobile/CuttingSystem3mkMobile/CuttingSystem3mkMobile.csproj
@@ -13,10 +13,11 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="3.6.0.264807" />
     <PackageReference Include="Xamarin.Essentials" Version="1.0.1" />
-    <PackageReference Include="LiveXAML" Version="2.1.70" />
     <PackageReference Include="Xam.Plugin.Connectivity" Version="3.2.0" />
     <PackageReference Include="MvvmCross.Forms" Version="6.2.3" />
     <PackageReference Include="ZXing.Net.Mobile" Version="2.4.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+    <PackageReference Include="LiveXAML" Version="2.1.70" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Pages\" />
@@ -26,6 +27,11 @@
     <Folder Include="Triggers\" />
     <Folder Include="Controls\" />
     <Folder Include="Convertors\" />
+    <Folder Include="Entities\" />
+    <Folder Include="Enums\" />
+    <Folder Include="RestAPI\" />
+    <Folder Include="ApplicationContext\" />
+    <Folder Include="Entities\Response\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="Pages\ModelsPage.xaml.cs">
@@ -34,8 +40,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Remove="asus-zenfone-2-delux.plt" />
+    <None Remove="foilIcon.png" />
+    <None Remove="deviceIcon.png" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="asus-zenfone-2-delux.plt" />
+    <EmbeddedResource Include="foilIcon.png" />
+    <EmbeddedResource Include="deviceIcon.png" />
   </ItemGroup>
 </Project>
