--- a/CuttingSystem3mkMobile/CuttingSystem3mkMobile.Android/packages.config
+++ b/CuttingSystem3mkMobile/CuttingSystem3mkMobile.Android/packages.config
@@ -76,6 +76,6 @@
   <package id="Xamarin.Android.Support.Vector.Drawable" version="28.0.0.1" targetFramework="monoandroid81" />
   <package id="Xamarin.Auth" version="1.6.0.4" targetFramework="monoandroid81" />
   <package id="Xamarin.Build.Download" version="0.4.11" targetFramework="monoandroid81" />
-  <package id="Xamarin.Forms" version="3.6.0.264807" targetFramework="monoandroid81" />
+  <package id="Xamarin.Forms" version="3.4.0.1029999" targetFramework="monoandroid81" />
   <package id="ZXing.Net.Mobile" version="2.4.1" targetFramework="monoandroid81" />
 </packages>
