--- a/FirePlatform.Mobile/FirePlatform.WebApi/FirePlatform.WebApi/appsettings.json
+++ b/FirePlatform.Mobile/FirePlatform.WebApi/FirePlatform.WebApi/appsettings.json
@@ -10,6 +10,10 @@
       //"ConnectionString": "Server=sql6001.site4now.net;Database=DB_A43487_FirePlatformDB;MultipleActiveResultSets=true;User Id=DB_A43487_FirePlatformDB_admin;Password=V@sya123!;"
       "ConnectionString": "Server=DESKTOP-5V6A2V8;Database=FirePlatformDB;Trusted_Connection=True;MultipleActiveResultSets=true;"
     }
+  },
+  "Jwt": {
+    "Key": "fireplatform123Q!@#evtrseQWR",
+    "Issuer": "fireplatform123.com"
   }
 }
 
