save loaded tmp to DB

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,6 @@ FirePlatform.Mobile/FirePlatform.WebApi/FirePlatform.Models/bin/
 FirePlatform.Mobile/FirePlatform.WebApi/.vs/
 FirePlatform.Mobile/FirePlatform.Mobile.Android/bin/
 FirePlatform.Mobile/FirePlatform.Mobile.iOS/bin
+FirePlatform.Mobile/NCalc/bin/
+FirePlatform.Mobile/NCalc/obj/Debug/
+FirePlatform.Mobile/NCalc/obj/
